@@ -1,3 +1,8 @@
+(29/09/14)
+==========
+
+· Added Info > Test Internet bandwidth
+
 (27/09/14)
 ==========
 
